--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.33.6",
+    "@coinbase/onchainkit": "^0.33.5",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -30,8 +30,7 @@
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.x",
-    "wagmi": "^2.12.17",
+    "wagmi": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
